--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "tsx": "^4.19.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.23",
-    "nodemon": "^3.1.10",
-    "tsx": "^4.19.4"
+    "nodemon": "^3.1.10"
   }
 }
